@@ -59,6 +59,27 @@
                 </code>
            </summary>
             <bugs>
+                <bug id="716" tool="jira">
+                    <description>
+						SourceGenerator doesn't correctly generate the .equals()
+						method for base64binary
+                    </description>
+                    <contributor>
+                        <name>Edward Kuns</name>
+                        <email>edward.kuns@aspect.com</email>
+                    </contributor>
+                    <submitter>
+                        <name>Edward Kuns</name>
+                        <email>edward.kuns@aspect.com</email>
+                    </submitter>
+                    <reporter>
+                        <name>Derek Sayeau</name>
+                        <email>derek.sayeau@cognos.com</email>
+                    </reporter>
+                    <type>Test</type>
+                    <module>XML</module>
+                    <date>20061007</date>
+                </bug>
                 <bug id="1609" tool="jira">
                     <description>
 						Implement equals() for AnyNode (already fixed, so adding
